<resources>
    <string name="app_name">NameBattler_ver0.0</string>
    <string name="game_title">ネームバトラー</string>
    <string name="show_chara_list">キャラ一覧</string>
    <string name="start_battle">バトル開始</string>
    <string name="back">戻る</string>
    <string name="status">ステータス</string>
    <string name="delete">削除する</string>
    <string name="input_name">名前を入力してください</string>
    <string name="input_job">職業を選択してください</string>
    <string name="guardian">ガーディアン</string>
    <string name="priest">僧侶</string>
    <string name="wizard">魔法使い</string>
    <string name="fighter">戦士</string>
    <string name="create_chara">作成する</string>
    <string name="continue_create_chara">続けて作成する</string>
    <string name="end_create_chara">作成を終了する</string>
    <string name="selected_chara_count">(0/3)</string>
    <string name="selected_party">このパーティで開始</string>
    <string name="vs">VS</string>
    <string name="select_target">この相手と戦う</string>
    <string name="select_again_target">相手を選び直す</string>
    <string name="next_turn">次のターン</string>
    <string name="strategy">作戦：</string>
    <string name="change">変更</string>
    <string name="select_strategy">パーティの作戦を選んでください</string>
    <string name="decide">決定</string>
    <string name="battle_result">バトル結果</string>
    <string name="strategy_header">作戦</string>
    <string name="strategy_low_hp">HPが低い敵を狙う</string>
    <string name="strategy_low_def">DEFが低い敵を狙う</string>
    <string name="strategy_low_agi">AGIが低い敵を狙う</string>
    <string name="strategy_under_hp100">HP100以下の敵を狙う</string>
    <string name="strategy_target_wizard">魔法使いを狙う</string>
    <string name="strategy_target_priest">僧侶を狙う</string>
    <string name="challenge_again">再挑戦</string>
    <string name="next_battle">次の対戦へ</string>
    <string name="end_battle">対戦を終了する</string>
    <string name="new_create_chara">新しく作成する</string>
</resources>