<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateCharaActivity">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prompt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="30sp"
        android:text="@string/input_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/input_name"
        app:layout_constraintStart_toStartOf="@+id/prompt_name"
        app:layout_constraintTop_toBottomOf="@+id/prompt_name" />

    <TextView
        android:id="@+id/prompt_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/input_job"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <RadioGroup
        android:id="@+id/job_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/prompt_job"
        app:layout_constraintTop_toBottomOf="@+id/prompt_job" >

        <RadioButton
            android:id="@+id/fighter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fighter"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/wizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/priest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priest"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/guardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardian"
            android:textSize="24sp"/>

    </RadioGroup>

    <Button
        android:id="@+id/create_chara_button"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/create_chara"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/button_style"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_list" />

</androidx.constraintlayout.widget.ConstraintLayout>