<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BattleActivity">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/selected_chara_list"
        android:layout_width="390sp"
        android:layout_height="120sp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <FrameLayout
        android:id="@+id/selected_target_chara_list"
        android:layout_width="390sp"
        android:layout_height="120sp"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_chara_list" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strategy"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/change_strategy_button"
        app:layout_constraintStart_toStartOf="@+id/selected_target_chara_list"
        app:layout_constraintTop_toTopOf="@+id/change_strategy_button" />

    <Button
        android:id="@+id/change_strategy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_style"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="@+id/selected_target_chara_list"
        app:layout_constraintTop_toBottomOf="@+id/selected_target_chara_list" />

    <ScrollView
        android:id="@+id/logScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toTopOf="@+id/next_turn_button"
        app:layout_constraintEnd_toEndOf="@+id/selected_target_chara_list"
        app:layout_constraintStart_toStartOf="@+id/selected_target_chara_list"
        app:layout_constraintTop_toBottomOf="@+id/change_strategy_button" >

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp" />

    </ScrollView>

    <Button
        android:id="@+id/next_turn_button"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/next_turn"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_style"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/select_strategy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorWhite"
        android:elevation="10sp"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/strategy_header"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:background="@color/colorGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/strategy_header"
                android:textSize="24sp" />

            <Button
                android:id="@+id/decide_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10sp"
                android:background="@drawable/button_style"
                android:text="@string/decide"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/select_strategy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/select_strategy"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/strategy_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:layout_constraintStart_toStartOf="@+id/select_strategy_title"
                app:layout_constraintTop_toBottomOf="@+id/select_strategy_title">

                <RadioButton
                    android:id="@+id/strategy1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/strategy_low_hp"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/strategy2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strategy_low_def"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/strategy3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strategy_low_agi"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/strategy4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strategy_under_hp100"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/strategy5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strategy_target_wizard"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/strategy6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strategy_target_priest"
                    android:textSize="24sp" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>