<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/show_chara_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_chara_list"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_style"
        android:layout_marginTop="250sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_title" />

    <Button
        android:id="@+id/start_battle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_battle"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_style"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_chara_list_button" />

</androidx.constraintlayout.widget.ConstraintLayout>