<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SelectTargetPartyActivity">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/selected_chara_list"
        android:layout_width="match_parent"
        android:layout_height="230sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/vs_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_chara_list" />

    <FrameLayout
        android:id="@+id/selected_target_chara_list"
        android:layout_width="match_parent"
        android:layout_height="230sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vs_text" />

    <Button
        android:id="@+id/decide_target_button"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/select_target"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/button_style"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_target_chara_list" />

    <Button
        android:id="@+id/select_again_target_button"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/select_again_target"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/button_style"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decide_target_button" />

</androidx.constraintlayout.widget.ConstraintLayout>